--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@lmstudio/sdk": "^0.4.7",
     "fastify": "^5.2.1"
   },
   "devDependencies": {
